Fixed typo in Xss value and removed verbose gc logging
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>